# AddCompileFailureTestExample

./: .gitmodules  CMakeLists.txt  README.md
include/: sum.h
tests/: CMakeLists.txt  failing_withous_plus.cpp  int_sum.cpp
